--- a/.env
+++ b/.env
@@ -2,16 +2,16 @@ APP_NAME=Laravel
 APP_ENV=local
 APP_KEY=base64:KJfH2xz9bD8lVrcTo55Cr3jnLINAmmAL52jYBSpD+yc=
 APP_DEBUG=true
-APP_URL=http://localhost
+APP_URL=https://crudlaravel1.herokuapp.com/public
 
 LOG_CHANNEL=stack
 
 DB_CONNECTION=mysql
-DB_HOST=127.0.0.1
+DB_HOST=us-cdbr-iron-east-02.cleardb.net
 DB_PORT=3306
-DB_DATABASE=crud_laravel
-DB_USERNAME=root
-DB_PASSWORD=
+DB_DATABASE=heroku_53e2890c5f57807
+DB_USERNAME=b386ba0c9572f4
+DB_PASSWORD=bafcd14d
 
 BROADCAST_DRIVER=log
 CACHE_DRIVER=file
