--- a/.env
+++ b/.env
@@ -2,7 +2,7 @@ APP_NAME=Laravel
 APP_ENV=local
 APP_KEY=base64:KJfH2xz9bD8lVrcTo55Cr3jnLINAmmAL52jYBSpD+yc=
 APP_DEBUG=true
-APP_URL=https://crudlaravel1.herokuapp.com/public
+APP_URL=https://crudlaravel1.herokuapp.com/public/
 
 LOG_CHANNEL=stack
 
